# routes/apis/user.php
@@ -4,12 +4,7 @@
 
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\AuthController;
-
-
-
-
-
-
+use App\Http\Controllers\Api\GoogleAuthController;
 
 Route::post('/register', [AuthController::class, 'register'])->middleware(["validate.user"]);
 Route::post('/verify-otp', [AuthController::class, 'verifyOtp'])->middleware(["validate.otp"]);
@@ -19,5 +14,20 @@ Route::post('/logout', [AuthController::class, 'logout'])->middleware(['auth.use
 Route::post('/logoutAll', [AuthController::class, 'logoutAll'])->middleware(['auth.user']);
 Route::post('/forget', [AuthController::class, 'forgetPassword'])->middleware(["validate.resend"]);
 Route::post('/reset', [AuthController::class, 'resetPassword'])->middleware(["validate.reset"]);
+
+
+// Google Authentication
+
+Route::middleware(['web'])->group(function(){
+
+
+    Route::get('/google/redirect', [GoogleAuthController::class, 'redirectToGoogle']);
+
+    Route::get('/google/callback', [GoogleAuthController::class, 'handleGoogleCallback']);
+
+
+});
+
+
 
 
